// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Regression Suite - Real C/AL Files Fixture: codeunit-9-acc-sched-kpi-dimensions.cal should match AST snapshot 1`] = `
{
  "endToken": {
    "column": 19,
    "endOffset": 21,
    "line": 1,
    "startOffset": 18,
    "type": "IDENTIFIER",
    "value": "Acc",
  },
  "object": {
    "code": null,
    "endToken": {
      "column": 19,
      "endOffset": 21,
      "line": 1,
      "startOffset": 18,
      "type": "IDENTIFIER",
      "value": "Acc",
    },
    "fieldGroups": null,
    "fields": null,
    "keys": null,
    "objectId": 9,
    "objectKind": "Codeunit",
    "objectName": "Acc",
    "properties": null,
    "startToken": {
      "column": 1,
      "endOffset": 6,
      "line": 1,
      "startOffset": 0,
      "type": "OBJECT",
      "value": "OBJECT",
    },
    "type": "ObjectDeclaration",
  },
  "startToken": {
    "column": 1,
    "endOffset": 6,
    "line": 1,
    "startOffset": 0,
    "type": "OBJECT",
    "value": "OBJECT",
  },
  "type": "CALDocument",
}
`;

exports[`Regression Suite - Real C/AL Files Fixture: codeunit-93-purch-quote-to-order.cal should match AST snapshot 1`] = `
{
  "endToken": {
    "column": 20,
    "endOffset": 24,
    "line": 1,
    "startOffset": 19,
    "type": "IDENTIFIER",
    "value": "Purch",
  },
  "object": {
    "code": null,
    "endToken": {
      "column": 20,
      "endOffset": 24,
      "line": 1,
      "startOffset": 19,
      "type": "IDENTIFIER",
      "value": "Purch",
    },
    "fieldGroups": null,
    "fields": null,
    "keys": null,
    "objectId": 93,
    "objectKind": "Codeunit",
    "objectName": "Purch",
    "properties": null,
    "startToken": {
      "column": 1,
      "endOffset": 6,
      "line": 1,
      "startOffset": 0,
      "type": "OBJECT",
      "value": "OBJECT",
    },
    "type": "ObjectDeclaration",
  },
  "startToken": {
    "column": 1,
    "endOffset": 6,
    "line": 1,
    "startOffset": 0,
    "type": "OBJECT",
    "value": "OBJECT",
  },
  "type": "CALDocument",
}
`;

exports[`Regression Suite - Real C/AL Files Fixture: codeunit-416-release-service-document.cal should match AST snapshot 1`] = `
{
  "endToken": {
    "column": 21,
    "endOffset": 27,
    "line": 1,
    "startOffset": 20,
    "type": "IDENTIFIER",
    "value": "Release",
  },
  "object": {
    "code": null,
    "endToken": {
      "column": 21,
      "endOffset": 27,
      "line": 1,
      "startOffset": 20,
      "type": "IDENTIFIER",
      "value": "Release",
    },
    "fieldGroups": null,
    "fields": null,
    "keys": null,
    "objectId": 416,
    "objectKind": "Codeunit",
    "objectName": "Release",
    "properties": null,
    "startToken": {
      "column": 1,
      "endOffset": 6,
      "line": 1,
      "startOffset": 0,
      "type": "OBJECT",
      "value": "OBJECT",
    },
    "type": "ObjectDeclaration",
  },
  "startToken": {
    "column": 1,
    "endOffset": 6,
    "line": 1,
    "startOffset": 0,
    "type": "OBJECT",
    "value": "OBJECT",
  },
  "type": "CALDocument",
}
`;

exports[`Regression Suite - Real C/AL Files Fixture: page-1216-data-exch-col-def-part.cal should match AST snapshot 1`] = `
{
  "endToken": {
    "column": 18,
    "endOffset": 21,
    "line": 1,
    "startOffset": 17,
    "type": "IDENTIFIER",
    "value": "Data",
  },
  "object": {
    "code": null,
    "endToken": {
      "column": 18,
      "endOffset": 21,
      "line": 1,
      "startOffset": 17,
      "type": "IDENTIFIER",
      "value": "Data",
    },
    "fieldGroups": null,
    "fields": null,
    "keys": null,
    "objectId": 1216,
    "objectKind": "Page",
    "objectName": "Data",
    "properties": null,
    "startToken": {
      "column": 1,
      "endOffset": 6,
      "line": 1,
      "startOffset": 0,
      "type": "OBJECT",
      "value": "OBJECT",
    },
    "type": "ObjectDeclaration",
  },
  "startToken": {
    "column": 1,
    "endOffset": 6,
    "line": 1,
    "startOffset": 0,
    "type": "OBJECT",
    "value": "OBJECT",
  },
  "type": "CALDocument",
}
`;

exports[`Regression Suite - Real C/AL Files Fixture: page-1799-data-migration-overview.cal should match AST snapshot 1`] = `
{
  "endToken": {
    "column": 18,
    "endOffset": 21,
    "line": 1,
    "startOffset": 17,
    "type": "IDENTIFIER",
    "value": "Data",
  },
  "object": {
    "code": null,
    "endToken": {
      "column": 18,
      "endOffset": 21,
      "line": 1,
      "startOffset": 17,
      "type": "IDENTIFIER",
      "value": "Data",
    },
    "fieldGroups": null,
    "fields": null,
    "keys": null,
    "objectId": 1799,
    "objectKind": "Page",
    "objectName": "Data",
    "properties": null,
    "startToken": {
      "column": 1,
      "endOffset": 6,
      "line": 1,
      "startOffset": 0,
      "type": "OBJECT",
      "value": "OBJECT",
    },
    "type": "ObjectDeclaration",
  },
  "startToken": {
    "column": 1,
    "endOffset": 6,
    "line": 1,
    "startOffset": 0,
    "type": "OBJECT",
    "value": "OBJECT",
  },
  "type": "CALDocument",
}
`;

exports[`Regression Suite - Real C/AL Files Fixture: table-18-customer.cal should match AST snapshot 1`] = `
{
  "endToken": {
    "column": 8,
    "endOffset": 1492,
    "line": 57,
    "startOffset": 1491,
    "type": "SEMICOLON",
    "value": ";",
  },
  "object": {
    "code": {
      "endToken": {
        "column": 8,
        "endOffset": 1492,
        "line": 57,
        "startOffset": 1491,
        "type": "SEMICOLON",
        "value": ";",
      },
      "procedures": [
        {
          "body": [
            {
              "endToken": {
                "column": 5,
                "endOffset": 1403,
                "line": 52,
                "startOffset": 1400,
                "type": "END",
                "value": "END",
              },
              "startToken": {
                "column": 5,
                "endOffset": 1023,
                "line": 40,
                "startOffset": 1018,
                "type": "BEGIN",
                "value": "BEGIN",
              },
              "statements": [
                {
                  "endToken": {
                    "column": 24,
                    "endOffset": 1049,
                    "line": 41,
                    "startOffset": 1048,
                    "type": "SEMICOLON",
                    "value": ";",
                  },
                  "startToken": {
                    "column": 7,
                    "endOffset": 1043,
                    "line": 41,
                    "startOffset": 1031,
                    "type": "IDENTIFIER",
                    "value": "TotalBalance",
                  },
                  "target": {
                    "endToken": {
                      "column": 7,
                      "endOffset": 1043,
                      "line": 41,
                      "startOffset": 1031,
                      "type": "IDENTIFIER",
                      "value": "TotalBalance",
                    },
                    "isQuoted": false,
                    "name": "TotalBalance",
                    "startToken": {
                      "column": 7,
                      "endOffset": 1043,
                      "line": 41,
                      "startOffset": 1031,
                      "type": "IDENTIFIER",
                      "value": "TotalBalance",
                    },
                    "type": "Identifier",
                  },
                  "type": "AssignmentStatement",
                  "value": {
                    "endToken": {
                      "column": 23,
                      "endOffset": 1048,
                      "line": 41,
                      "startOffset": 1047,
                      "type": "INTEGER",
                      "value": "0",
                    },
                    "literalType": "integer",
                    "startToken": {
                      "column": 23,
                      "endOffset": 1048,
                      "line": 41,
                      "startOffset": 1047,
                      "type": "INTEGER",
                      "value": "0",
                    },
                    "type": "Literal",
                    "value": 0,
                  },
                },
                {
                  "endToken": {
                    "column": 53,
                    "endOffset": 1104,
                    "line": 42,
                    "startOffset": 1103,
                    "type": "SEMICOLON",
                    "value": ";",
                  },
                  "expression": {
                    "arguments": [
                      {
                        "endToken": {
                          "column": 32,
                          "endOffset": 1096,
                          "line": 42,
                          "startOffset": 1082,
                          "type": "QUOTED_IDENTIFIER",
                          "value": "Customer No.",
                        },
                        "isQuoted": true,
                        "name": "Customer No.",
                        "startToken": {
                          "column": 32,
                          "endOffset": 1096,
                          "line": 42,
                          "startOffset": 1082,
                          "type": "QUOTED_IDENTIFIER",
                          "value": "Customer No.",
                        },
                        "type": "Identifier",
                      },
                      {
                        "endToken": {
                          "column": 47,
                          "endOffset": 1102,
                          "line": 42,
                          "startOffset": 1097,
                          "type": "QUOTED_IDENTIFIER",
                          "value": "No.",
                        },
                        "isQuoted": true,
                        "name": "No.",
                        "startToken": {
                          "column": 47,
                          "endOffset": 1102,
                          "line": 42,
                          "startOffset": 1097,
                          "type": "QUOTED_IDENTIFIER",
                          "value": "No.",
                        },
                        "type": "Identifier",
                      },
                    ],
                    "callee": {
                      "endToken": {
                        "column": 23,
                        "endOffset": 1081,
                        "line": 42,
                        "startOffset": 1073,
                        "type": "IDENTIFIER",
                        "value": "SETRANGE",
                      },
                      "object": {
                        "endToken": {
                          "column": 7,
                          "endOffset": 1072,
                          "line": 42,
                          "startOffset": 1057,
                          "type": "IDENTIFIER",
                          "value": "CustLedgerEntry",
                        },
                        "isQuoted": false,
                        "name": "CustLedgerEntry",
                        "startToken": {
                          "column": 7,
                          "endOffset": 1072,
                          "line": 42,
                          "startOffset": 1057,
                          "type": "IDENTIFIER",
                          "value": "CustLedgerEntry",
                        },
                        "type": "Identifier",
                      },
                      "property": {
                        "endToken": {
                          "column": 23,
                          "endOffset": 1081,
                          "line": 42,
                          "startOffset": 1073,
                          "type": "IDENTIFIER",
                          "value": "SETRANGE",
                        },
                        "isQuoted": false,
                        "name": "SETRANGE",
                        "startToken": {
                          "column": 23,
                          "endOffset": 1081,
                          "line": 42,
                          "startOffset": 1073,
                          "type": "IDENTIFIER",
                          "value": "SETRANGE",
                        },
                        "type": "Identifier",
                      },
                      "startToken": {
                        "column": 7,
                        "endOffset": 1072,
                        "line": 42,
                        "startOffset": 1057,
                        "type": "IDENTIFIER",
                        "value": "CustLedgerEntry",
                      },
                      "type": "MemberExpression",
                    },
                    "endToken": {
                      "column": 52,
                      "endOffset": 1103,
                      "line": 42,
                      "startOffset": 1102,
                      "type": "RIGHT_PAREN",
                      "value": ")",
                    },
                    "startToken": {
                      "column": 7,
                      "endOffset": 1072,
                      "line": 42,
                      "startOffset": 1057,
                      "type": "IDENTIFIER",
                      "value": "CustLedgerEntry",
                    },
                    "type": "CallExpression",
                  },
                  "startToken": {
                    "column": 7,
                    "endOffset": 1072,
                    "line": 42,
                    "startOffset": 1057,
                    "type": "IDENTIFIER",
                    "value": "CustLedgerEntry",
                  },
                  "type": "CallStatement",
                },
                {
                  "condition": {
                    "endToken": {
                      "column": 26,
                      "endOffset": 1138,
                      "line": 43,
                      "startOffset": 1131,
                      "type": "IDENTIFIER",
                      "value": "FINDSET",
                    },
                    "object": {
                      "endToken": {
                        "column": 10,
                        "endOffset": 1130,
                        "line": 43,
                        "startOffset": 1115,
                        "type": "IDENTIFIER",
                        "value": "CustLedgerEntry",
                      },
                      "isQuoted": false,
                      "name": "CustLedgerEntry",
                      "startToken": {
                        "column": 10,
                        "endOffset": 1130,
                        "line": 43,
                        "startOffset": 1115,
                        "type": "IDENTIFIER",
                        "value": "CustLedgerEntry",
                      },
                      "type": "Identifier",
                    },
                    "property": {
                      "endToken": {
                        "column": 26,
                        "endOffset": 1138,
                        "line": 43,
                        "startOffset": 1131,
                        "type": "IDENTIFIER",
                        "value": "FINDSET",
                      },
                      "isQuoted": false,
                      "name": "FINDSET",
                      "startToken": {
                        "column": 26,
                        "endOffset": 1138,
                        "line": 43,
                        "startOffset": 1131,
                        "type": "IDENTIFIER",
                        "value": "FINDSET",
                      },
                      "type": "Identifier",
                    },
                    "startToken": {
                      "column": 10,
                      "endOffset": 1130,
                      "line": 43,
                      "startOffset": 1115,
                      "type": "IDENTIFIER",
                      "value": "CustLedgerEntry",
                    },
                    "type": "MemberExpression",
                  },
                  "elseBranch": null,
                  "endToken": {
                    "column": 7,
                    "endOffset": 1283,
                    "line": 47,
                    "startOffset": 1280,
                    "type": "END",
                    "value": "END",
                  },
                  "startToken": {
                    "column": 7,
                    "endOffset": 1114,
                    "line": 43,
                    "startOffset": 1112,
                    "type": "IF",
                    "value": "IF",
                  },
                  "thenBranch": {
                    "endToken": {
                      "column": 7,
                      "endOffset": 1283,
                      "line": 47,
                      "startOffset": 1280,
                      "type": "END",
                      "value": "END",
                    },
                    "startToken": {
                      "column": 39,
                      "endOffset": 1149,
                      "line": 43,
                      "startOffset": 1144,
                      "type": "BEGIN",
                      "value": "BEGIN",
                    },
                    "statements": [
                      {
                        "body": [
                          {
                            "endToken": {
                              "column": 64,
                              "endOffset": 1231,
                              "line": 45,
                              "startOffset": 1230,
                              "type": "SEMICOLON",
                              "value": ";",
                            },
                            "startToken": {
                              "column": 11,
                              "endOffset": 1189,
                              "line": 45,
                              "startOffset": 1177,
                              "type": "IDENTIFIER",
                              "value": "TotalBalance",
                            },
                            "target": {
                              "endToken": {
                                "column": 11,
                                "endOffset": 1189,
                                "line": 45,
                                "startOffset": 1177,
                                "type": "IDENTIFIER",
                                "value": "TotalBalance",
                              },
                              "isQuoted": false,
                              "name": "TotalBalance",
                              "startToken": {
                                "column": 11,
                                "endOffset": 1189,
                                "line": 45,
                                "startOffset": 1177,
                                "type": "IDENTIFIER",
                                "value": "TotalBalance",
                              },
                              "type": "Identifier",
                            },
                            "type": "AssignmentStatement",
                            "value": {
                              "endToken": {
                                "column": 58,
                                "endOffset": 1230,
                                "line": 45,
                                "startOffset": 1224,
                                "type": "IDENTIFIER",
                                "value": "Amount",
                              },
                              "left": {
                                "endToken": {
                                  "column": 27,
                                  "endOffset": 1205,
                                  "line": 45,
                                  "startOffset": 1193,
                                  "type": "IDENTIFIER",
                                  "value": "TotalBalance",
                                },
                                "isQuoted": false,
                                "name": "TotalBalance",
                                "startToken": {
                                  "column": 27,
                                  "endOffset": 1205,
                                  "line": 45,
                                  "startOffset": 1193,
                                  "type": "IDENTIFIER",
                                  "value": "TotalBalance",
                                },
                                "type": "Identifier",
                              },
                              "operator": "+",
                              "right": {
                                "endToken": {
                                  "column": 58,
                                  "endOffset": 1230,
                                  "line": 45,
                                  "startOffset": 1224,
                                  "type": "IDENTIFIER",
                                  "value": "Amount",
                                },
                                "object": {
                                  "endToken": {
                                    "column": 42,
                                    "endOffset": 1223,
                                    "line": 45,
                                    "startOffset": 1208,
                                    "type": "IDENTIFIER",
                                    "value": "CustLedgerEntry",
                                  },
                                  "isQuoted": false,
                                  "name": "CustLedgerEntry",
                                  "startToken": {
                                    "column": 42,
                                    "endOffset": 1223,
                                    "line": 45,
                                    "startOffset": 1208,
                                    "type": "IDENTIFIER",
                                    "value": "CustLedgerEntry",
                                  },
                                  "type": "Identifier",
                                },
                                "property": {
                                  "endToken": {
                                    "column": 58,
                                    "endOffset": 1230,
                                    "line": 45,
                                    "startOffset": 1224,
                                    "type": "IDENTIFIER",
                                    "value": "Amount",
                                  },
                                  "isQuoted": false,
                                  "name": "Amount",
                                  "startToken": {
                                    "column": 58,
                                    "endOffset": 1230,
                                    "line": 45,
                                    "startOffset": 1224,
                                    "type": "IDENTIFIER",
                                    "value": "Amount",
                                  },
                                  "type": "Identifier",
                                },
                                "startToken": {
                                  "column": 42,
                                  "endOffset": 1223,
                                  "line": 45,
                                  "startOffset": 1208,
                                  "type": "IDENTIFIER",
                                  "value": "CustLedgerEntry",
                                },
                                "type": "MemberExpression",
                              },
                              "startToken": {
                                "column": 27,
                                "endOffset": 1205,
                                "line": 45,
                                "startOffset": 1193,
                                "type": "IDENTIFIER",
                                "value": "TotalBalance",
                              },
                              "type": "BinaryExpression",
                            },
                          },
                        ],
                        "condition": {
                          "endToken": {
                            "column": 38,
                            "endOffset": 1271,
                            "line": 46,
                            "startOffset": 1270,
                            "type": "INTEGER",
                            "value": "0",
                          },
                          "left": {
                            "endToken": {
                              "column": 31,
                              "endOffset": 1267,
                              "line": 46,
                              "startOffset": 1263,
                              "type": "IDENTIFIER",
                              "value": "NEXT",
                            },
                            "object": {
                              "endToken": {
                                "column": 15,
                                "endOffset": 1262,
                                "line": 46,
                                "startOffset": 1247,
                                "type": "IDENTIFIER",
                                "value": "CustLedgerEntry",
                              },
                              "isQuoted": false,
                              "name": "CustLedgerEntry",
                              "startToken": {
                                "column": 15,
                                "endOffset": 1262,
                                "line": 46,
                                "startOffset": 1247,
                                "type": "IDENTIFIER",
                                "value": "CustLedgerEntry",
                              },
                              "type": "Identifier",
                            },
                            "property": {
                              "endToken": {
                                "column": 31,
                                "endOffset": 1267,
                                "line": 46,
                                "startOffset": 1263,
                                "type": "IDENTIFIER",
                                "value": "NEXT",
                              },
                              "isQuoted": false,
                              "name": "NEXT",
                              "startToken": {
                                "column": 31,
                                "endOffset": 1267,
                                "line": 46,
                                "startOffset": 1263,
                                "type": "IDENTIFIER",
                                "value": "NEXT",
                              },
                              "type": "Identifier",
                            },
                            "startToken": {
                              "column": 15,
                              "endOffset": 1262,
                              "line": 46,
                              "startOffset": 1247,
                              "type": "IDENTIFIER",
                              "value": "CustLedgerEntry",
                            },
                            "type": "MemberExpression",
                          },
                          "operator": "=",
                          "right": {
                            "endToken": {
                              "column": 38,
                              "endOffset": 1271,
                              "line": 46,
                              "startOffset": 1270,
                              "type": "INTEGER",
                              "value": "0",
                            },
                            "literalType": "integer",
                            "startToken": {
                              "column": 38,
                              "endOffset": 1271,
                              "line": 46,
                              "startOffset": 1270,
                              "type": "INTEGER",
                              "value": "0",
                            },
                            "type": "Literal",
                            "value": 0,
                          },
                          "startToken": {
                            "column": 15,
                            "endOffset": 1262,
                            "line": 46,
                            "startOffset": 1247,
                            "type": "IDENTIFIER",
                            "value": "CustLedgerEntry",
                          },
                          "type": "BinaryExpression",
                        },
                        "endToken": {
                          "column": 39,
                          "endOffset": 1272,
                          "line": 46,
                          "startOffset": 1271,
                          "type": "SEMICOLON",
                          "value": ";",
                        },
                        "startToken": {
                          "column": 9,
                          "endOffset": 1165,
                          "line": 44,
                          "startOffset": 1159,
                          "type": "REPEAT",
                          "value": "REPEAT",
                        },
                        "type": "RepeatStatement",
                      },
                    ],
                    "type": "BlockStatement",
                  },
                  "type": "IfStatement",
                },
                {
                  "endToken": {
                    "column": 10,
                    "endOffset": 1284,
                    "line": 47,
                    "startOffset": 1283,
                    "type": "SEMICOLON",
                    "value": ";",
                  },
                  "expression": {
                    "endToken": {
                      "column": 10,
                      "endOffset": 1284,
                      "line": 47,
                      "startOffset": 1283,
                      "type": "SEMICOLON",
                      "value": ";",
                    },
                    "isQuoted": false,
                    "name": ";",
                    "startToken": {
                      "column": 10,
                      "endOffset": 1284,
                      "line": 47,
                      "startOffset": 1283,
                      "type": "SEMICOLON",
                      "value": ";",
                    },
                    "type": "Identifier",
                  },
                  "startToken": {
                    "column": 10,
                    "endOffset": 1284,
                    "line": 47,
                    "startOffset": 1283,
                    "type": "SEMICOLON",
                    "value": ";",
                  },
                  "type": "CallStatement",
                },
                {
                  "condition": {
                    "arguments": [],
                    "callee": {
                      "endToken": {
                        "column": 26,
                        "endOffset": 1318,
                        "line": 48,
                        "startOffset": 1311,
                        "type": "IDENTIFIER",
                        "value": "FINDSET",
                      },
                      "object": {
                        "endToken": {
                          "column": 10,
                          "endOffset": 1310,
                          "line": 48,
                          "startOffset": 1295,
                          "type": "IDENTIFIER",
                          "value": "CustLedgerEntry",
                        },
                        "isQuoted": false,
                        "name": "CustLedgerEntry",
                        "startToken": {
                          "column": 10,
                          "endOffset": 1310,
                          "line": 48,
                          "startOffset": 1295,
                          "type": "IDENTIFIER",
                          "value": "CustLedgerEntry",
                        },
                        "type": "Identifier",
                      },
                      "property": {
                        "endToken": {
                          "column": 26,
                          "endOffset": 1318,
                          "line": 48,
                          "startOffset": 1311,
                          "type": "IDENTIFIER",
                          "value": "FINDSET",
                        },
                        "isQuoted": false,
                        "name": "FINDSET",
                        "startToken": {
                          "column": 26,
                          "endOffset": 1318,
                          "line": 48,
                          "startOffset": 1311,
                          "type": "IDENTIFIER",
                          "value": "FINDSET",
                        },
                        "type": "Identifier",
                      },
                      "startToken": {
                        "column": 10,
                        "endOffset": 1310,
                        "line": 48,
                        "startOffset": 1295,
                        "type": "IDENTIFIER",
                        "value": "CustLedgerEntry",
                      },
                      "type": "MemberExpression",
                    },
                    "endToken": {
                      "column": 34,
                      "endOffset": 1320,
                      "line": 48,
                      "startOffset": 1319,
                      "type": "RIGHT_PAREN",
                      "value": ")",
                    },
                    "startToken": {
                      "column": 10,
                      "endOffset": 1310,
                      "line": 48,
                      "startOffset": 1295,
                      "type": "IDENTIFIER",
                      "value": "CustLedgerEntry",
                    },
                    "type": "CallExpression",
                  },
                  "elseBranch": null,
                  "endToken": {
                    "column": 7,
                    "endOffset": 1366,
                    "line": 50,
                    "startOffset": 1363,
                    "type": "END",
                    "value": "END",
                  },
                  "startToken": {
                    "column": 7,
                    "endOffset": 1294,
                    "line": 48,
                    "startOffset": 1292,
                    "type": "IF",
                    "value": "IF",
                  },
                  "thenBranch": {
                    "endToken": {
                      "column": 7,
                      "endOffset": 1366,
                      "line": 50,
                      "startOffset": 1363,
                      "type": "END",
                      "value": "END",
                    },
                    "startToken": {
                      "column": 41,
                      "endOffset": 1331,
                      "line": 48,
                      "startOffset": 1326,
                      "type": "BEGIN",
                      "value": "BEGIN",
                    },
                    "statements": [
                      {
                        "endToken": {
                          "column": 22,
                          "endOffset": 1355,
                          "line": 49,
                          "startOffset": 1354,
                          "type": "SEMICOLON",
                          "value": ";",
                        },
                        "expression": {
                          "arguments": [],
                          "callee": {
                            "endToken": {
                              "column": 9,
                              "endOffset": 1352,
                              "line": 49,
                              "startOffset": 1341,
                              "type": "IDENTIFIER",
                              "value": "ShowMessage",
                            },
                            "isQuoted": false,
                            "name": "ShowMessage",
                            "startToken": {
                              "column": 9,
                              "endOffset": 1352,
                              "line": 49,
                              "startOffset": 1341,
                              "type": "IDENTIFIER",
                              "value": "ShowMessage",
                            },
                            "type": "Identifier",
                          },
                          "endToken": {
                            "column": 21,
                            "endOffset": 1354,
                            "line": 49,
                            "startOffset": 1353,
                            "type": "RIGHT_PAREN",
                            "value": ")",
                          },
                          "startToken": {
                            "column": 9,
                            "endOffset": 1352,
                            "line": 49,
                            "startOffset": 1341,
                            "type": "IDENTIFIER",
                            "value": "ShowMessage",
                          },
                          "type": "CallExpression",
                        },
                        "startToken": {
                          "column": 9,
                          "endOffset": 1352,
                          "line": 49,
                          "startOffset": 1341,
                          "type": "IDENTIFIER",
                          "value": "ShowMessage",
                        },
                        "type": "CallStatement",
                      },
                    ],
                    "type": "BlockStatement",
                  },
                  "type": "IfStatement",
                },
                {
                  "endToken": {
                    "column": 10,
                    "endOffset": 1367,
                    "line": 50,
                    "startOffset": 1366,
                    "type": "SEMICOLON",
                    "value": ";",
                  },
                  "expression": {
                    "endToken": {
                      "column": 10,
                      "endOffset": 1367,
                      "line": 50,
                      "startOffset": 1366,
                      "type": "SEMICOLON",
                      "value": ";",
                    },
                    "isQuoted": false,
                    "name": ";",
                    "startToken": {
                      "column": 10,
                      "endOffset": 1367,
                      "line": 50,
                      "startOffset": 1366,
                      "type": "SEMICOLON",
                      "value": ";",
                    },
                    "type": "Identifier",
                  },
                  "startToken": {
                    "column": 10,
                    "endOffset": 1367,
                    "line": 50,
                    "startOffset": 1366,
                    "type": "SEMICOLON",
                    "value": ";",
                  },
                  "type": "CallStatement",
                },
                {
                  "endToken": {
                    "column": 25,
                    "endOffset": 1394,
                    "line": 51,
                    "startOffset": 1393,
                    "type": "SEMICOLON",
                    "value": ";",
                  },
                  "startToken": {
                    "column": 7,
                    "endOffset": 1379,
                    "line": 51,
                    "startOffset": 1375,
                    "type": "EXIT",
                    "value": "EXIT",
                  },
                  "type": "ExitStatement",
                  "value": {
                    "endToken": {
                      "column": 12,
                      "endOffset": 1392,
                      "line": 51,
                      "startOffset": 1380,
                      "type": "IDENTIFIER",
                      "value": "TotalBalance",
                    },
                    "isQuoted": false,
                    "name": "TotalBalance",
                    "startToken": {
                      "column": 12,
                      "endOffset": 1392,
                      "line": 51,
                      "startOffset": 1380,
                      "type": "IDENTIFIER",
                      "value": "TotalBalance",
                    },
                    "type": "Identifier",
                  },
                },
              ],
              "type": "BlockStatement",
            },
          ],
          "endToken": {
            "column": 8,
            "endOffset": 1404,
            "line": 52,
            "startOffset": 1403,
            "type": "SEMICOLON",
            "value": ";",
          },
          "isLocal": false,
          "name": "GetBalance",
          "parameters": [],
          "returnType": {
            "endToken": {
              "column": 32,
              "endOffset": 925,
              "line": 36,
              "startOffset": 918,
              "type": "DECIMAL_TYPE",
              "value": "Decimal",
            },
            "length": undefined,
            "startToken": {
              "column": 32,
              "endOffset": 925,
              "line": 36,
              "startOffset": 918,
              "type": "DECIMAL_TYPE",
              "value": "Decimal",
            },
            "tableId": undefined,
            "type": "DataType",
            "typeName": "Decimal",
          },
          "startToken": {
            "column": 5,
            "endOffset": 900,
            "line": 36,
            "startOffset": 891,
            "type": "PROCEDURE",
            "value": "PROCEDURE",
          },
          "type": "ProcedureDeclaration",
          "variables": [
            {
              "dataType": {
                "endToken": {
                  "column": 37,
                  "endOffset": 975,
                  "line": 38,
                  "startOffset": 973,
                  "type": "INTEGER",
                  "value": "21",
                },
                "length": undefined,
                "startToken": {
                  "column": 30,
                  "endOffset": 972,
                  "line": 38,
                  "startOffset": 966,
                  "type": "RECORD",
                  "value": "Record",
                },
                "tableId": 21,
                "type": "DataType",
                "typeName": "Record 21",
              },
              "endToken": {
                "column": 39,
                "endOffset": 976,
                "line": 38,
                "startOffset": 975,
                "type": "SEMICOLON",
                "value": ";",
              },
              "isTemporary": false,
              "name": "CustLedgerEntry",
              "startToken": {
                "column": 7,
                "endOffset": 958,
                "line": 38,
                "startOffset": 943,
                "type": "IDENTIFIER",
                "value": "CustLedgerEntry",
              },
              "type": "VariableDeclaration",
            },
            {
              "dataType": {
                "endToken": {
                  "column": 27,
                  "endOffset": 1011,
                  "line": 39,
                  "startOffset": 1004,
                  "type": "DECIMAL_TYPE",
                  "value": "Decimal",
                },
                "length": undefined,
                "startToken": {
                  "column": 27,
                  "endOffset": 1011,
                  "line": 39,
                  "startOffset": 1004,
                  "type": "DECIMAL_TYPE",
                  "value": "Decimal",
                },
                "tableId": undefined,
                "type": "DataType",
                "typeName": "Decimal",
              },
              "endToken": {
                "column": 34,
                "endOffset": 1012,
                "line": 39,
                "startOffset": 1011,
                "type": "SEMICOLON",
                "value": ";",
              },
              "isTemporary": false,
              "name": "TotalBalance",
              "startToken": {
                "column": 7,
                "endOffset": 996,
                "line": 39,
                "startOffset": 984,
                "type": "IDENTIFIER",
                "value": "TotalBalance",
              },
              "type": "VariableDeclaration",
            },
          ],
        },
        {
          "body": [
            {
              "endToken": {
                "column": 5,
                "endOffset": 1491,
                "line": 57,
                "startOffset": 1488,
                "type": "END",
                "value": "END",
              },
              "startToken": {
                "column": 5,
                "endOffset": 1449,
                "line": 55,
                "startOffset": 1444,
                "type": "BEGIN",
                "value": "BEGIN",
              },
              "statements": [
                {
                  "endToken": {
                    "column": 31,
                    "endOffset": 1482,
                    "line": 56,
                    "startOffset": 1481,
                    "type": "SEMICOLON",
                    "value": ";",
                  },
                  "expression": {
                    "arguments": [
                      {
                        "endToken": {
                          "column": 15,
                          "endOffset": 1472,
                          "line": 56,
                          "startOffset": 1465,
                          "type": "IDENTIFIER",
                          "value": "Text001",
                        },
                        "isQuoted": false,
                        "name": "Text001",
                        "startToken": {
                          "column": 15,
                          "endOffset": 1472,
                          "line": 56,
                          "startOffset": 1465,
                          "type": "IDENTIFIER",
                          "value": "Text001",
                        },
                        "type": "Identifier",
                      },
                      {
                        "endToken": {
                          "column": 24,
                          "endOffset": 1480,
                          "line": 56,
                          "startOffset": 1474,
                          "type": "QUOTED_IDENTIFIER",
                          "value": "Name",
                        },
                        "isQuoted": true,
                        "name": "Name",
                        "startToken": {
                          "column": 24,
                          "endOffset": 1480,
                          "line": 56,
                          "startOffset": 1474,
                          "type": "QUOTED_IDENTIFIER",
                          "value": "Name",
                        },
                        "type": "Identifier",
                      },
                    ],
                    "callee": {
                      "endToken": {
                        "column": 7,
                        "endOffset": 1464,
                        "line": 56,
                        "startOffset": 1457,
                        "type": "IDENTIFIER",
                        "value": "MESSAGE",
                      },
                      "isQuoted": false,
                      "name": "MESSAGE",
                      "startToken": {
                        "column": 7,
                        "endOffset": 1464,
                        "line": 56,
                        "startOffset": 1457,
                        "type": "IDENTIFIER",
                        "value": "MESSAGE",
                      },
                      "type": "Identifier",
                    },
                    "endToken": {
                      "column": 30,
                      "endOffset": 1481,
                      "line": 56,
                      "startOffset": 1480,
                      "type": "RIGHT_PAREN",
                      "value": ")",
                    },
                    "startToken": {
                      "column": 7,
                      "endOffset": 1464,
                      "line": 56,
                      "startOffset": 1457,
                      "type": "IDENTIFIER",
                      "value": "MESSAGE",
                    },
                    "type": "CallExpression",
                  },
                  "startToken": {
                    "column": 7,
                    "endOffset": 1464,
                    "line": 56,
                    "startOffset": 1457,
                    "type": "IDENTIFIER",
                    "value": "MESSAGE",
                  },
                  "type": "CallStatement",
                },
              ],
              "type": "BlockStatement",
            },
          ],
          "endToken": {
            "column": 8,
            "endOffset": 1492,
            "line": 57,
            "startOffset": 1491,
            "type": "SEMICOLON",
            "value": ";",
          },
          "isLocal": false,
          "name": "ShowMessage",
          "parameters": [],
          "returnType": null,
          "startToken": {
            "column": 5,
            "endOffset": 1421,
            "line": 54,
            "startOffset": 1412,
            "type": "PROCEDURE",
            "value": "PROCEDURE",
          },
          "type": "ProcedureDeclaration",
          "variables": [],
        },
      ],
      "startToken": {
        "column": 3,
        "endOffset": 759,
        "line": 30,
        "startOffset": 755,
        "type": "CODE",
        "value": "CODE",
      },
      "triggers": [],
      "type": "CodeSection",
      "variables": [
        {
          "dataType": {
            "endToken": {
              "column": 32,
              "endOffset": 845,
              "line": 33,
              "startOffset": 806,
              "type": "STRING",
              "value": "ENU=The customer %1 has been created.",
            },
            "length": undefined,
            "startToken": {
              "column": 22,
              "endOffset": 805,
              "line": 33,
              "startOffset": 796,
              "type": "TEXTCONST",
              "value": "TextConst",
            },
            "tableId": undefined,
            "type": "DataType",
            "typeName": "TextConst",
          },
          "endToken": {
            "column": 71,
            "endOffset": 846,
            "line": 33,
            "startOffset": 845,
            "type": "SEMICOLON",
            "value": ";",
          },
          "isTemporary": false,
          "name": "Text001",
          "startToken": {
            "column": 7,
            "endOffset": 788,
            "line": 33,
            "startOffset": 781,
            "type": "IDENTIFIER",
            "value": "Text001",
          },
          "type": "VariableDeclaration",
        },
        {
          "dataType": {
            "endToken": {
              "column": 28,
              "endOffset": 882,
              "line": 34,
              "startOffset": 875,
              "type": "INTEGER_TYPE",
              "value": "Integer",
            },
            "length": undefined,
            "startToken": {
              "column": 28,
              "endOffset": 882,
              "line": 34,
              "startOffset": 875,
              "type": "INTEGER_TYPE",
              "value": "Integer",
            },
            "tableId": undefined,
            "type": "DataType",
            "typeName": "Integer",
          },
          "endToken": {
            "column": 35,
            "endOffset": 883,
            "line": 34,
            "startOffset": 882,
            "type": "SEMICOLON",
            "value": ";",
          },
          "isTemporary": false,
          "name": "CustomerCount",
          "startToken": {
            "column": 7,
            "endOffset": 867,
            "line": 34,
            "startOffset": 854,
            "type": "IDENTIFIER",
            "value": "CustomerCount",
          },
          "type": "VariableDeclaration",
        },
      ],
    },
    "endToken": {
      "column": 8,
      "endOffset": 1492,
      "line": 57,
      "startOffset": 1491,
      "type": "SEMICOLON",
      "value": ";",
    },
    "fieldGroups": null,
    "fields": {
      "endToken": {
        "column": 3,
        "endOffset": 614,
        "line": 24,
        "startOffset": 613,
        "type": "RIGHT_BRACE",
        "value": "}",
      },
      "fields": [
        {
          "dataType": {
            "endToken": {
              "column": 33,
              "endOffset": 257,
              "line": 16,
              "startOffset": 251,
              "type": "IDENTIFIER",
              "value": "Code20",
            },
            "length": undefined,
            "startToken": {
              "column": 33,
              "endOffset": 257,
              "line": 16,
              "startOffset": 251,
              "type": "IDENTIFIER",
              "value": "Code20",
            },
            "tableId": undefined,
            "type": "DataType",
            "typeName": "Code20",
          },
          "endToken": {
            "column": 47,
            "endOffset": 266,
            "line": 16,
            "startOffset": 265,
            "type": "RIGHT_BRACE",
            "value": "}",
          },
          "fieldClass": "",
          "fieldName": "No.",
          "fieldNo": 1,
          "properties": null,
          "startToken": {
            "column": 5,
            "endOffset": 224,
            "line": 16,
            "startOffset": 223,
            "type": "LEFT_BRACE",
            "value": "{",
          },
          "type": "FieldDeclaration",
        },
        {
          "dataType": {
            "endToken": {
              "column": 33,
              "endOffset": 306,
              "line": 17,
              "startOffset": 300,
              "type": "IDENTIFIER",
              "value": "Text50",
            },
            "length": undefined,
            "startToken": {
              "column": 33,
              "endOffset": 306,
              "line": 17,
              "startOffset": 300,
              "type": "IDENTIFIER",
              "value": "Text50",
            },
            "tableId": undefined,
            "type": "DataType",
            "typeName": "Text50",
          },
          "endToken": {
            "column": 47,
            "endOffset": 315,
            "line": 17,
            "startOffset": 314,
            "type": "RIGHT_BRACE",
            "value": "}",
          },
          "fieldClass": "",
          "fieldName": "Name",
          "fieldNo": 2,
          "properties": null,
          "startToken": {
            "column": 5,
            "endOffset": 273,
            "line": 17,
            "startOffset": 272,
            "type": "LEFT_BRACE",
            "value": "{",
          },
          "type": "FieldDeclaration",
        },
        {
          "dataType": {
            "endToken": {
              "column": 33,
              "endOffset": 355,
              "line": 18,
              "startOffset": 349,
              "type": "IDENTIFIER",
              "value": "Text50",
            },
            "length": undefined,
            "startToken": {
              "column": 33,
              "endOffset": 355,
              "line": 18,
              "startOffset": 349,
              "type": "IDENTIFIER",
              "value": "Text50",
            },
            "tableId": undefined,
            "type": "DataType",
            "typeName": "Text50",
          },
          "endToken": {
            "column": 47,
            "endOffset": 364,
            "line": 18,
            "startOffset": 363,
            "type": "RIGHT_BRACE",
            "value": "}",
          },
          "fieldClass": "",
          "fieldName": "Address",
          "fieldNo": 3,
          "properties": null,
          "startToken": {
            "column": 5,
            "endOffset": 322,
            "line": 18,
            "startOffset": 321,
            "type": "LEFT_BRACE",
            "value": "{",
          },
          "type": "FieldDeclaration",
        },
        {
          "dataType": {
            "endToken": {
              "column": 33,
              "endOffset": 404,
              "line": 19,
              "startOffset": 398,
              "type": "IDENTIFIER",
              "value": "Text50",
            },
            "length": undefined,
            "startToken": {
              "column": 33,
              "endOffset": 404,
              "line": 19,
              "startOffset": 398,
              "type": "IDENTIFIER",
              "value": "Text50",
            },
            "tableId": undefined,
            "type": "DataType",
            "typeName": "Text50",
          },
          "endToken": {
            "column": 47,
            "endOffset": 413,
            "line": 19,
            "startOffset": 412,
            "type": "RIGHT_BRACE",
            "value": "}",
          },
          "fieldClass": "",
          "fieldName": "Address 2",
          "fieldNo": 4,
          "properties": null,
          "startToken": {
            "column": 5,
            "endOffset": 371,
            "line": 19,
            "startOffset": 370,
            "type": "LEFT_BRACE",
            "value": "{",
          },
          "type": "FieldDeclaration",
        },
        {
          "dataType": {
            "endToken": {
              "column": 33,
              "endOffset": 453,
              "line": 20,
              "startOffset": 447,
              "type": "IDENTIFIER",
              "value": "Text30",
            },
            "length": undefined,
            "startToken": {
              "column": 33,
              "endOffset": 453,
              "line": 20,
              "startOffset": 447,
              "type": "IDENTIFIER",
              "value": "Text30",
            },
            "tableId": undefined,
            "type": "DataType",
            "typeName": "Text30",
          },
          "endToken": {
            "column": 47,
            "endOffset": 462,
            "line": 20,
            "startOffset": 461,
            "type": "RIGHT_BRACE",
            "value": "}",
          },
          "fieldClass": "",
          "fieldName": "City",
          "fieldNo": 5,
          "properties": null,
          "startToken": {
            "column": 5,
            "endOffset": 420,
            "line": 20,
            "startOffset": 419,
            "type": "LEFT_BRACE",
            "value": "{",
          },
          "type": "FieldDeclaration",
        },
        {
          "dataType": {
            "endToken": {
              "column": 33,
              "endOffset": 502,
              "line": 21,
              "startOffset": 496,
              "type": "IDENTIFIER",
              "value": "Text30",
            },
            "length": undefined,
            "startToken": {
              "column": 33,
              "endOffset": 502,
              "line": 21,
              "startOffset": 496,
              "type": "IDENTIFIER",
              "value": "Text30",
            },
            "tableId": undefined,
            "type": "DataType",
            "typeName": "Text30",
          },
          "endToken": {
            "column": 47,
            "endOffset": 511,
            "line": 21,
            "startOffset": 510,
            "type": "RIGHT_BRACE",
            "value": "}",
          },
          "fieldClass": "",
          "fieldName": "Phone No.",
          "fieldNo": 6,
          "properties": null,
          "startToken": {
            "column": 5,
            "endOffset": 469,
            "line": 21,
            "startOffset": 468,
            "type": "LEFT_BRACE",
            "value": "{",
          },
          "type": "FieldDeclaration",
        },
        {
          "dataType": {
            "endToken": {
              "column": 33,
              "endOffset": 552,
              "line": 22,
              "startOffset": 545,
              "type": "DECIMAL_TYPE",
              "value": "Decimal",
            },
            "length": undefined,
            "startToken": {
              "column": 33,
              "endOffset": 552,
              "line": 22,
              "startOffset": 545,
              "type": "DECIMAL_TYPE",
              "value": "Decimal",
            },
            "tableId": undefined,
            "type": "DataType",
            "typeName": "Decimal",
          },
          "endToken": {
            "column": 47,
            "endOffset": 560,
            "line": 22,
            "startOffset": 559,
            "type": "RIGHT_BRACE",
            "value": "}",
          },
          "fieldClass": "",
          "fieldName": "Credit Limit",
          "fieldNo": 7,
          "properties": null,
          "startToken": {
            "column": 5,
            "endOffset": 518,
            "line": 22,
            "startOffset": 517,
            "type": "LEFT_BRACE",
            "value": "{",
          },
          "type": "FieldDeclaration",
        },
        {
          "dataType": {
            "endToken": {
              "column": 33,
              "endOffset": 601,
              "line": 23,
              "startOffset": 594,
              "type": "DECIMAL_TYPE",
              "value": "Decimal",
            },
            "length": undefined,
            "startToken": {
              "column": 33,
              "endOffset": 601,
              "line": 23,
              "startOffset": 594,
              "type": "DECIMAL_TYPE",
              "value": "Decimal",
            },
            "tableId": undefined,
            "type": "DataType",
            "typeName": "Decimal",
          },
          "endToken": {
            "column": 47,
            "endOffset": 609,
            "line": 23,
            "startOffset": 608,
            "type": "RIGHT_BRACE",
            "value": "}",
          },
          "fieldClass": "",
          "fieldName": "Balance",
          "fieldNo": 8,
          "properties": null,
          "startToken": {
            "column": 5,
            "endOffset": 567,
            "line": 23,
            "startOffset": 566,
            "type": "LEFT_BRACE",
            "value": "{",
          },
          "type": "FieldDeclaration",
        },
      ],
      "startToken": {
        "column": 3,
        "endOffset": 212,
        "line": 14,
        "startOffset": 206,
        "type": "FIELDS",
        "value": "FIELDS",
      },
      "type": "FieldSection",
    },
    "keys": {
      "endToken": {
        "column": 3,
        "endOffset": 751,
        "line": 29,
        "startOffset": 750,
        "type": "RIGHT_BRACE",
        "value": "}",
      },
      "keys": [
        {
          "endToken": {
            "column": 58,
            "endOffset": 687,
            "line": 27,
            "startOffset": 686,
            "type": "RIGHT_BRACE",
            "value": "}",
          },
          "fields": [],
          "properties": null,
          "startToken": {
            "column": 5,
            "endOffset": 634,
            "line": 27,
            "startOffset": 633,
            "type": "LEFT_BRACE",
            "value": "{",
          },
          "type": "KeyDeclaration",
        },
        {
          "endToken": {
            "column": 57,
            "endOffset": 746,
            "line": 28,
            "startOffset": 745,
            "type": "RIGHT_BRACE",
            "value": "}",
          },
          "fields": [],
          "properties": null,
          "startToken": {
            "column": 5,
            "endOffset": 694,
            "line": 28,
            "startOffset": 693,
            "type": "LEFT_BRACE",
            "value": "{",
          },
          "type": "KeyDeclaration",
        },
      ],
      "startToken": {
        "column": 3,
        "endOffset": 622,
        "line": 25,
        "startOffset": 618,
        "type": "KEYS",
        "value": "KEYS",
      },
      "type": "KeySection",
    },
    "objectId": 18,
    "objectKind": "Table",
    "objectName": "Customer",
    "properties": {
      "endToken": {
        "column": 3,
        "endOffset": 202,
        "line": 13,
        "startOffset": 201,
        "type": "RIGHT_BRACE",
        "value": "}",
      },
      "properties": [
        {
          "endToken": {
            "column": 33,
            "endOffset": 171,
            "line": 11,
            "startOffset": 170,
            "type": "SEMICOLON",
            "value": ";",
          },
          "name": "DataCaptionFields",
          "startToken": {
            "column": 5,
            "endOffset": 159,
            "line": 11,
            "startOffset": 142,
            "type": "IDENTIFIER",
            "value": "DataCaptionFields",
          },
          "type": "Property",
          "value": "No.,Name",
        },
        {
          "endToken": {
            "column": 24,
            "endOffset": 197,
            "line": 12,
            "startOffset": 196,
            "type": "SEMICOLON",
            "value": ";",
          },
          "name": "LookupPageID",
          "startToken": {
            "column": 5,
            "endOffset": 189,
            "line": 12,
            "startOffset": 177,
            "type": "IDENTIFIER",
            "value": "LookupPageID",
          },
          "type": "Property",
          "value": "Page22",
        },
      ],
      "startToken": {
        "column": 3,
        "endOffset": 131,
        "line": 9,
        "startOffset": 121,
        "type": "PROPERTIES",
        "value": "PROPERTIES",
      },
      "type": "PropertySection",
    },
    "startToken": {
      "column": 1,
      "endOffset": 6,
      "line": 1,
      "startOffset": 0,
      "type": "OBJECT",
      "value": "OBJECT",
    },
    "type": "ObjectDeclaration",
  },
  "startToken": {
    "column": 1,
    "endOffset": 6,
    "line": 1,
    "startOffset": 0,
    "type": "OBJECT",
    "value": "OBJECT",
  },
  "type": "CALDocument",
}
`;

exports[`Regression Suite - Real C/AL Files Fixture: table-1223-data-exch-column-def.cal should match AST snapshot 1`] = `
{
  "endToken": {
    "column": 19,
    "endOffset": 22,
    "line": 1,
    "startOffset": 18,
    "type": "IDENTIFIER",
    "value": "Data",
  },
  "object": {
    "code": null,
    "endToken": {
      "column": 19,
      "endOffset": 22,
      "line": 1,
      "startOffset": 18,
      "type": "IDENTIFIER",
      "value": "Data",
    },
    "fieldGroups": null,
    "fields": null,
    "keys": null,
    "objectId": 1223,
    "objectKind": "Table",
    "objectName": "Data",
    "properties": null,
    "startToken": {
      "column": 1,
      "endOffset": 6,
      "line": 1,
      "startOffset": 0,
      "type": "OBJECT",
      "value": "OBJECT",
    },
    "type": "ObjectDeclaration",
  },
  "startToken": {
    "column": 1,
    "endOffset": 6,
    "line": 1,
    "startOffset": 0,
    "type": "OBJECT",
    "value": "OBJECT",
  },
  "type": "CALDocument",
}
`;

exports[`Regression Suite - Real C/AL Files Fixture: table-50000-customer-extended.cal should match AST snapshot 1`] = `
{
  "endToken": {
    "column": 20,
    "endOffset": 27,
    "line": 1,
    "startOffset": 19,
    "type": "IDENTIFIER",
    "value": "Customer",
  },
  "object": {
    "code": null,
    "endToken": {
      "column": 20,
      "endOffset": 27,
      "line": 1,
      "startOffset": 19,
      "type": "IDENTIFIER",
      "value": "Customer",
    },
    "fieldGroups": null,
    "fields": null,
    "keys": null,
    "objectId": 50000,
    "objectKind": "Table",
    "objectName": "Customer",
    "properties": null,
    "startToken": {
      "column": 1,
      "endOffset": 6,
      "line": 1,
      "startOffset": 0,
      "type": "OBJECT",
      "value": "OBJECT",
    },
    "type": "ObjectDeclaration",
  },
  "startToken": {
    "column": 1,
    "endOffset": 6,
    "line": 1,
    "startOffset": 0,
    "type": "OBJECT",
    "value": "OBJECT",
  },
  "type": "CALDocument",
}
`;

exports[`Regression Suite - Real C/AL Files Fixture: xmlport-1225-data-exch-def-mapping.cal should match AST snapshot 1`] = `
{
  "endToken": {
    "column": 21,
    "endOffset": 23,
    "line": 1,
    "startOffset": 20,
    "type": "IDENTIFIER",
    "value": "Imp",
  },
  "object": {
    "code": null,
    "endToken": {
      "column": 21,
      "endOffset": 23,
      "line": 1,
      "startOffset": 20,
      "type": "IDENTIFIER",
      "value": "Imp",
    },
    "fieldGroups": null,
    "fields": null,
    "keys": null,
    "objectId": 1225,
    "objectKind": "XMLport",
    "objectName": "Imp",
    "properties": null,
    "startToken": {
      "column": 1,
      "endOffset": 6,
      "line": 1,
      "startOffset": 0,
      "type": "OBJECT",
      "value": "OBJECT",
    },
    "type": "ObjectDeclaration",
  },
  "startToken": {
    "column": 1,
    "endOffset": 6,
    "line": 1,
    "startOffset": 0,
    "type": "OBJECT",
    "value": "OBJECT",
  },
  "type": "CALDocument",
}
`;
